form overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,7 @@ footer {
         top: 25px;
     }
 }
+
+iframe{
+    width: 100%;
+}
